# Qlibxlsxwriter

./: .gitignore  .travis.yml  README.ko.md  README.md  Setting.md  TestEnv.md  _config.yml
.github/workflows/: ubuntu.yml
Hello/: Hello.pro  main.cpp
Qlibxlsxwriter/: Qlibxlsxwriter.pri  Qlibxlsxwriter.pro
minizip/: CMakeLists.txt
